c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/initialize_struct_member_wrong_type.c
struct s {
    signed char *char_ptr;
};

int main(void) {
    // because the structure member char_ptr has type signed char *,
    // rather than char *, we can't initialize it with a string literal
    struct s x = {"It's a string"};
    return 0;
}